# umutardaozdes-uretim-takip-case

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  package-lock.json  package.json
.ai/memory/: README.md  project.md  tasks.md
.claude/: settings.json.example
.docs/: README.md
.githooks/: pre-commit
.roadmap/: CHECKLIST.md  README.md  roadmap.md
ai_usage/: 00_overall_summary.md  README.md
apps/api/: README.md  main.py  pyproject.toml  requirements-dev.txt
apps/api/app/: main.py
apps/api/app/api/v1/: analytics.py  imports.py  records.py  router.py  sync.py  validation.py
apps/api/app/core/: config.py  oee.py
apps/api/app/db/: init_db.py  models.py  session.py
apps/api/app/features/analytics/: __init__.py  api.py  schemas.py  service.py
apps/api/app/features/ingestion/: __init__.py  api.py  normalizer.py  schemas.py  service.py
apps/api/app/features/records/: api.py  export.py  schemas.py  service.py
apps/api/app/features/sync/: aggregator.py  api.py  client.py  retry.py  schemas.py  service.py
apps/api/app/features/validation/: api.py  engine.py  models.py  report.py
apps/api/app/features/validation/rules/: base.py  domain.py  duplicate.py  format_.py  missing.py
apps/api/tests/: conftest.py  test_ingestion.py  test_oee.py  test_sync.py  test_validation.py
backend/: README.md  requirements.txt
data/: README.md
db/: README.md
frontend/: .env.local.example  .eslintrc.json  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
scripts/: backup-sessions.sh  new-ai-prompt.sh
(+250 files in other folders)
