[project]
name = "uretim-takip-api"
version = "0.1.0"
description = "Üretim Performans Takip — FastAPI backend"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "T20"]  # T20: print() yasağı (logging kullan)
ignore = ["B008"]  # FastAPI Depends() default pattern

[tool.ruff.lint.per-file-ignores]
"app/db/init_db.py" = ["T20"]                 # CLI çıktısı serbest
"app/features/ingestion/seed.py" = ["T20"]    # CLI çıktısı serbest

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
